<resources>
    <string name="app_name">SBTS</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="submit">Submit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="Login_URL">https://sbts2022.000webhostapp.com/api/login.php</string>
    <string name="Absent_Students_URL">https://sbts2022.000webhostapp.com/api/absentStudentlist.php</string>
    <string name="Location_Out_URL">https://sbts2022.000webhostapp.com/api/locationout.php</string>
    <string name="Student_List_URL">https://sbts2022.000webhostapp.com/api/studentList.php</string>
    <string name="Reset_Student_List_URL">https://sbts2022.000webhostapp.com/api/resetStudentList.php</string>
    <string name="Attendee_URL">https://sbts2022.000webhostapp.com/api/attendee.php</string>
    <string name="Upload_Profile_URL">https://sbts2022.000webhostapp.com/api/uploadprofile.php</string>
    <string name="Parent_Registration_URL">https://sbts2022.000webhostapp.com/api/registerParent.php</string>
    <string name="Attendee_Registration_URL">https://sbts2022.000webhostapp.com/api/registerAttendee.php</string>
    <string name="Student_Registration_URL">https://sbts2022.000webhostapp.com/api/registerStudent.php</string>
    <string name="Driver_Registration_URL">https://sbts2022.000webhostapp.com/api/registerDriver.php</string>
    <string name="Parent_URL">https://sbts2022.000webhostapp.com/api/parent.php</string>
    <string name="Driver_URL">https://sbts2022.000webhostapp.com/api/driver.php</string>
    <string name="Bus_URL">https://sbts2022.000webhostapp.com/api/busDetails.php</string>
    <string name="Upload_Profile_Parent_URL">https://sbts2022.000webhostapp.com/api/uploadprofileparent.php</string>
    <string name="Reset_Password_URL">https://sbts2022.000webhostapp.com/api/resetpassword.php</string>
    <string name="photo_Set_TEXT">Selected</string>
    <string name="Mark_Present_URL">https://sbts2022.000webhostapp.com/api/markPresent.php</string>
    <string name="Change_Password_URL">https://sbts2022.000webhostapp.com/api/changepassword.php</string>
    <string name="Location_In_URL">https://sbts2022.000webhostapp.com/api/locationin.php</string>
    <string name="bus_locations_url">https://sbts2022.000webhostapp.com/api/bus_locations.php</string>
    <string name="Present_Students_URL">https://sbts2022.000webhostapp.com/api/presentStudentlist.php</string>
    <string name="personal_details">Personal Details</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="date_of_birth_yyyy_mm_dd">Enter your date of birth (YYYY-MM-DD)</string>
    <string name="select_your_gender">Select your gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="select_profile_photo">Select profile photo</string>
    <string name="choose">choose</string>
    <string name="alternate_mobile_no">Enter your alternate mobile number</string>
    <string name="address_details">Address Details</string>
    <string name="residential_address">Enter your residential address</string>
    <string name="city">Enter the name of your city</string>
    <string name="pin_code">Enter your pin-code</string>
    <string name="id_no">Enter your childs ID Number</string>
    <string name="name">Enter your childs name</string>
    <string name="hybrid">Hybrid</string>
    <string name="terrain">Terrain</string>
    <string name="normal">Normal</string>
    <string name="satelite">Satellite</string>
    <string name="bus">Bus</string>
    <!--    <string name="profile">Profile</string>-->
    <string name="map">Map</string>
    <string name="student_s_list">Student\'s List</string>
    <string name="scanner">Scanner</string>
    <!--    <string name="change_password">Change Password</string>-->
    <!--    <string name="log_out">Log Out</string>-->
    <!--    <string name="log_out">Log Out</string>-->
    <!--    <string name="log_out">Log Out</string>-->
    <string name="log_out">Log Out</string>
    <string name="change_password">Change Password</string>
    <string name="bus_location">Bus Location</string>
    <string name="all">All</string>
    <string name="present">Present</string>
    <string name="absent">Absent</string>
    <string name="enter_your_username">Enter your Username</string>
    <string name="register_text">If your not a registered user click here to sign-up</string>
    <string name="reset_password">Forgot Password?</string>
    <string name="permission_needed">Permission Needed</string>
    <string name="permission_required_message">Allow SBTS to access this device\'s location</string>
    <string name="allow">Allow</string>
    <string name="deny">DENY</string>
    <string name="permission_granted">Permission Granted</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="username_error">Please enter your username</string>
    <string name="passoword_error">Please enter your password</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_email">\"Enter your email \"</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="enter_your_old_password">Enter your old password</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="old_pass_error">\"Enter your old password \"</string>
    <string name="new_password_error">\"Enter your new password \"</string>
    <string name="same_pass_error">\"old  password and new password should not be the same \"</string>
    <string name="bus_list">Bus List</string>
    <string name="bus_locations">Bus Locations</string>
    <string name="drivers_list">Drivers List</string>
    <string name="parents_list">Parents List</string>
    <string name="bus_list_url">https://sbts2022.000webhostapp.com/api/busList.php</string>
    <string name="driver_list_url">https://sbts2022.000webhostapp.com/api/driverList.php</string>
    <string name="attendee_list_url">https://sbts2022.000webhostapp.com/api/attendeeList.php</string>
    <string name="parent_list_url">https://sbts2022.000webhostapp.com/api/parentList.php</string>
    <string name="request_list_url">https://sbts2022.000webhostapp.com/api/RegistrationRequests.php</string>
    <string name="approve_url">https://sbts2022.000webhostapp.com/api/approveRequest.php</string>
    <string name="registration_requests">Registration Requests</string>
    <string name="approve">Approve</string>
    <string name="approved">Approved</string>
    <string name="attendee_list">Attendee List</string>
    <string name="full_name">Full Name</string>
    <string name="mobile">Mobile</string>
    <string name="alternate_mobile">Alternate mobile</string>
    <string name="aadhaar_detail">Aadhaar Detail</string>
    <string name="aadhaar_no">Aadhaar no</string>
    <string name="add_driver">add driver</string>
    <string name="bus_details">Bus Details</string>
    <string name="bus_name">Bus Name</string>
    <string name="vehicle_model">Vehicle Model</string>
    <string name="capacity">Capacity</string>
    <string name="color">Color</string>
    <string name="bus_no">Bus No</string>
    <string name="add_bus_url">https://sbts2022.000webhostapp.com/api/addBus.php</string>
    <string name="student_details">Student Details</string>
    <string name="student_name">Student Name</string>
    <string name="father_name">Father Name</string>
    <string name="mother_name">Mother Name</string>
    <string name="male_female">Male/Female</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="city_name">City</string>
    <string name="pincode">Pin code</string>
    <string name="student_id">Student Id</string>
    <string name="roll_no">Roll No</string>
    <string name="className">Class</string>
    <string name="division">Division</string>
    <string name="yyyy_mm_dd">YYYY-MM-DD</string>
    <string name="age">Age</string>
    <string name="add_student">Add Student</string>
    <string name="apply">Apply</string>
    <string name="bus_no_url">https://sbts2022.000webhostapp.com/api/bus_no_list.php</string>
    <string name="update_bus_no">https://sbts2022.000webhostapp.com/api/update_bus_no.php</string>
    <string name="payment">Payment</string>
    <string name="pay">Pay</string>
    <string name="request_payment">Request Payment</string>
    <string name="delete">Delete</string>
    <string name="print">print</string>
</resources>
