<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/selectActivities"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_busList"
            android:icon="@drawable/ic_bus_24"
            android:title="@string/bus_list"
            />


        <item
            android:id="@+id/nav_bus_locations"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/bus_locations"
            />


        <item
            android:id="@+id/nav_driver_list"
            android:icon="@drawable/ic_baseline_people_24"
            android:title="@string/drivers_list"
            />

        <item
            android:id="@+id/nav_parent_list"
            android:icon="@drawable/ic_baseline_people_24"
            android:title="@string/parents_list"
            />

        <item
            android:id="@+id/nav_requests_list"
            android:icon="@drawable/registration"
            android:title="@string/registration_requests"
            />


        <item
            android:id="@+id/nav_students_list"
            android:icon="@drawable/ic_student_present"
            android:title="@string/student_s_list"
            />



    </group>

    <item
        android:title="@string/log_out"
        >

        <menu>

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/log_out" />
        </menu>

    </item>

</menu>