<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/admin_navigation"
    app:startDestination="@+id/nav_map">

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.app.sbts.fragments.AttendeeHome"
        android:label="@string/profile"
        tools:layout="@layout/fragment_attendee_home" />


    <fragment
        android:id="@+id/nav_map"
        android:name="com.app.sbts.fragments.MapsFragment"
        android:label="@string/map"
        tools:layout="@layout/fragment_maps" />


    <fragment
        android:id="@+id/nav_student_list"
        android:name="com.app.sbts.fragments.StudentList"
        android:label="@string/student_s_list"
        tools:layout="@layout/fragment_student_list" />


    <fragment
        android:id="@+id/nav_password_change"
        android:name="com.app.sbts.fragments.ChangePassword"
        android:label="@string/change_password"
        tools:layout="@layout/fragment_change_password" />


</navigation>